<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:title="@string/category"
        android:id="@+id/category"
        android:icon="@drawable/ic_baseline_category_24"/>
    <item android:title="@string/cart"
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
</menu>